# MWGuy-Playground

./: CMakeLists.txt
res/: style.css
src/: magenta_tabs.cc  magenta_tabs.h  magenta_window.c  magenta_window.cc  magenta_window.cpp  magenta_window.h  magenta_window_title_bar.c  magenta_window_title_bar.cpp  magenta_window_title_bar.h  main.cc  main.cpp  main.h
src/classes/: MagentaTab.cpp  MagentaTab.h  MagentaTabPane.cpp  MagentaTabPane.h
src/classes/engine/: WebkitBrowserEngine.cpp  WebkitBrowserEngine.h
